--- a/index.css
+++ b/index.css
@@ -17,7 +17,7 @@ body {
     flex-direction: row;
     border: none;
     border-width: thin;
-    height: 90vh;
+    height: 100vh;
     border-radius: 10px;
     padding: 10px;
     gap: 5px;
@@ -32,17 +32,35 @@ body {
     padding: 10px;
     gap: 5px;
 }
+@property --angle {
+    syntax: '<angle>';
+    initial-value: 90deg;
+    inherits: true;
+}
 
+:root {
+    --d: 2200ms;
+    --angle: 90deg;
+    --c1: white;
+    --c2: rgba(168, 239, 255, 0.1);
+}
+@keyframes borderRotate {
+    100% {
+        --angle: 420deg;
+    }
+}
 .s-block {
     display: flex;
     flex-direction: row;
     border: solid;
     width: 11.11%;
-    border-width: thin;
+    border-width: 1px;
     border-radius: 10px;
     padding: 6px;
     gap: 10px;
     justify-content: space-around;
+    border-image: conic-gradient(from var(--angle), var(--c2), var(--c1) 0.1turn, var(--c1) 0.15turn, var(--c2) 0.25turn) 30;
+    animation: borderRotate var(--d) linear infinite forwards;
 }
 
 .d-block {
@@ -55,6 +73,8 @@ body {
     padding: 6px;
     gap: 10px;
     justify-content: space-around;
+    border-image: conic-gradient(from var(--angle), var(--c2), var(--c1) 0.1turn, var(--c1) 0.15turn, var(--c2) 0.25turn) 30;
+    animation: borderRotate var(--d) linear infinite forwards;
 }
 
 .p-block {
@@ -68,6 +88,8 @@ body {
     padding: 6px;
     gap: 10px;
     justify-content: space-around;
+    border-image: conic-gradient(from var(--angle), var(--c2), var(--c1) 0.1turn, var(--c1) 0.15turn, var(--c2) 0.25turn) 30;
+    animation: borderRotate var(--d) linear infinite forwards;
 }
 
 .group1,
@@ -240,9 +262,9 @@ h6{
     margin-top: 10px;
     margin-left: 10px;
     
-    border: solid;
+    
     border-width: 13px;
-    border-radius: 10px;
+    border-radius: 30px;
     border-color: transparent;
     box-shadow: rgb(255, 255, 255) 3.2px 3.2px 8px 0px inset, rgba(253, 216, 216, 0.356) -6.2px -3.2px 17px 0px inset;    padding: 20px;
     font-family: "poppins";
@@ -387,7 +409,8 @@ cursor: pointer;
 .alkaline-earth-metals{
     width: 40px;
     height:160px;
-    background-color: #b9b901;
+    /* background-color: #b9b901; */
+    background-color: #CC7178;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -431,7 +454,8 @@ cursor: pointer;
 .actinoids{
     display: flex;
     height: 80px;
-    background-color: #7c1e5b;
+    /* background-color: #7c1e5b; */
+    background-color: #6D2E46;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -447,7 +471,8 @@ cursor: pointer;
 .transition-metals{
     width: 20px;
     height:160px;
-    background-color: #891809;
+    /* background-color: #891809; */
+    background-color: crimson;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -576,4 +601,67 @@ cursor: pointer;
 
 .transparent {
     background-color: transparent !important;
+  }
+
+
+
+
+  .electrons-box{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: white;
+    font-family: "poppins";
+    flex-direction: row;
+    position: absolute;
+    width: 600px;
+    height: 100px;
+    border: solid;
+    border-width: thin;
+    border-color: #EDE7E3;
+    margin-top: 290px;
+    border-radius: 10px;
+    padding: 0px 20px;
+    gap: 10px;
+    box-shadow: rgb(255, 255, 255) 3.2px 3.2px 8px 0px inset, rgba(253, 216, 216, 0.356) -6.2px -3.2px 17px 0px inset;   
+
+  }
+  .electrons-group{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background: transparent;
+
+  }
+  .valency-group{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: auto;
+    background: transparent;
+
+  }
+  .electrons-box h4,
+  .valency-group h4{
+    color: #EDE7E3;
+    /* display: flex; */
+    margin-top: 8px;
+    font-size: 20px;
+    background: transparent;
+
+  }
+  .electrons,
+  .valency-no{
+    display: flex;
+    width: auto;
+    height: 60px;
+    color: white;
+    font-family: "poppins";
+    font-size: 30px;
+    margin-top: -25px;
+    font-weight: 600;
+    background: transparent;
+
   }
